moved accumulator to application.cpp
and set the deltatime for the simulation to fixedDeltatime

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(01_particle_animation)
 add_subdirectory(02_particles_framework)
 add_subdirectory(03_constraints_framework)
 add_subdirectory(04_rigid_body_framework)
+add_subdirectory(courseWork)
